added jwt token and user and role
